--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,7 @@ p {
   .content-block .person-img {
     height: 150px;
     width: 150px;
-    background: url(../img/picsaa.png);
+    background: url(../img/dp1.jpg);
     border-radius: 50%;
     background-repeat: no-repeat;
     background-size: cover; }
